ecmascript/parser/tests/test262-error-references/fail/ec34d41ac5849c84.module.js.stderr
error: Expected from, got /
 --> $DIR/tests/test262-parser/fail/ec34d41ac5849c84.module.js:1:8
  |
1 | import / as a from 'a'
  |        ^

